--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>🌟 Rohit's Personel Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="C:\Users\Subhash\Documents\Web Development\HTML-Personal Site\images\jobsCircle.png" alt="Steve Jobs Quote" height="150" width="150"></td>
-      <td><h1><a href="https://en.wikipedia.org/wiki/Job">Rohit</a></h1>
+      <td><img src="images\jobsCircle.png" alt="Steve Jobs Quote" height="150" width="150"></td>
+      <td><h1>Rohit</h1>
       <p><em>Founder and CTO of <strong>RD Softwares pvt Ltd</strong></em></p></td>
     </tr>
   </table>
